# kaleidomo

./: .gitignore  Cargo.toml  README.md  build_apple.sh  build_wasm_mac.sh  build_windows.sh  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  zip.sh
.github/workflows/: release.yml
benches/: Cargo.toml
benches/src/: kaleidomo.rs  lib.rs
kaleidomo-core/: Cargo.toml  build_wasm.sh  dbg_wasm.sh
kaleidomo-core/src/: lib.rs  rlib.rs  wasm.rs
kaleidomo-core/src/backends/: avx2.rs  gpu.rs  kaleidomo.wgsl  mod.rs  neon.rs  scalar.rs  sse2.rs
public/wasm/: kaleidomo_core.js  kaleidomo_core_bg.wasm
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build-ffmpeg-macos.sh  build-ffmpeg-windows.bat  sign-with-azure.cmd  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin-build-notes.txt  ffmpeg-aarch64-apple-darwin-version.txt  ffmpeg-x86_64-apple-darwin-build-notes.txt  ffmpeg-x86_64-apple-darwin-version.txt  ffmpeg-x86_64-pc-windows-msvc-build-notes.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: EULA.txt
src-tauri/src/: frame_protocol.rs  lib.rs  live_preview.rs  main.rs  preview_server.rs
src-tauri/src/licensing/: cooldown.rs  eula.rs  mod.rs  signature_verification.rs
src/components/: AppContent.tsx  AspectRatioPicker.tsx  Kaleidomo.tsx  NumberSliderInput.tsx  PerformanceModeCard.tsx  WedgePicker.tsx
src/components/licensing/: EulaGate.tsx  EulaModal.tsx  LicenseActivationCard.tsx  eulaContent.ts
src/components/ui/: tabs.tsx
src/lib/: app-menu.ts  kaleidomo-session-context.tsx  license-context.tsx  native-live-preview.ts  settings-context.tsx  utils.ts  webgpu-live-engine-guard.ts
src/wasm/: kaleidomo-wasm.ts  kaleidomo_core.d.ts  kaleidomo_core_stub.d.ts
