[package]
name = "kaleidomo"
version = "0.1.0"
description = "A Tauri App for kaleidoscope effects"
authors = ["Noah Stiltner"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kaleidomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
#default = ["cert_check"]
#default = ["logging"]
cert_check = []
logging = ["log", "tauri/devtools"]

[dependencies]
base64 = "0.21"
image = "0.24"
kaleidomo-core = { path = "../kaleidomo-core" }
kamadak-exif = "0.6"
log = { version = "0.4", optional = true }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.50.0"

